make it looks a bit better

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css">
+   <!-- Fluid viewport -->
+<link
+rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
+>
 </head>
 <body>
-    <header>
-        <h1>Login</h1>
-    </header>
+    <nav>
+        <ul>
+            <li><hgroup>
+                <h1>💰 Bajet</h1>
+                <p>Never run out of money!</p>
+              </hgroup></li>
+            
+        </ul>
+        <!-- <ul>
+            <li><a href="index.html">Welcome Faris !</a></li>
+        </ul> -->
+    </nav>
+    <!-- <header>
+        <h1>💰 Login to Bajet </h1>
+    </header> -->
     <main>
         <form>
             <!-- Email input -->
@@ -35,7 +51,8 @@
             />
           
             <!-- Submit button -->
-            <button type="submit">Login</button>
+            <button type="submit">Login 🔑</button>
+            <button type="button" onclick="window.location.href='signup.html'">Sign Up</button>
         </form>
     </main>
     <footer>
