fix: update template

--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@ href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
 >
 </head>
 <body>
-    <nav>
-        <ul>
+    <header>
+        <nav>
+          <ul>
             <li><hgroup>
-                <h1>💰 Bajet</h1>
-                <p>Never run out of money!</p>
-              </hgroup></li>
-            
-        </ul>
-        <!-- <ul>
-            <li><a href="index.html">Welcome Faris !</a></li>
-        </ul> -->
-    </nav>
-    <!-- <header>
-        <h1>💰 Login to Bajet </h1>
-    </header> -->
+              <h1>💰 Bajet</h1>
+              <p>Never run out of money!</p>
+            </hgroup></li>
+          </ul>
+          
+        </nav>
+  </header>
     <main>
         <form>
             <!-- Email input -->
