--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@ href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
         
 
         <main>
-            <dialog>
+            <!-- <dialog open>
                 <article>
                   <header>
                     <button aria-label="Close" rel="prev"></button>
@@ -87,7 +87,7 @@ href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
                     <li>Time: 10:00am - 12:00pm</li>
                   </ul>
                 </article>
-              </dialog>
+              </dialog> -->
             <!-- <section> -->
                 <button type="submit" id="add-transaction-button" onclick="window.location.href='transaction.html'">✚ Add Transaction</button>
             <!-- </section> -->
